partconf (1.08) UNRELEASED; urgency=low

  * Christian Perrier
    - Add a comment about the Choices length for translators
      in the debconf templates file
  * Colin Watson
    - get_all_partitions()'s symlink handling in /dev/discs was incorrect in
      places, and broke when using udev. Replace it with use of
      canonicalize_file_name().
    - Use getopt_long() for find-parts option parsing. Support -i as short
      version of --ignore-fstype.

 -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:26:03 +0100

partconf (1.07) unstable; urgency=low

  * Thiemo Seufer
    - Don't put empty directories in partconf which are also used in
      partconf-mkfstab, otherwise partconf might get purged
      inadvertently.
  * Updated translations: 
    - Italian (it.po) by Stefano Canepa

 -- Thiemo Seufer <ths@debian.org>  Fri, 04 Feb 2005 17:36:51 +0100

partconf (1.06) unstable; urgency=low

  * Colin Watson
    - Build with new libparted ABI (1.6.12).
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by French Team
    - Gallegan (gl.po) by Hctor Fenndez Lpez
    - Hebrew (he.po) by Lior Kaplan
    - Italian (it.po) by Giuseppe Sacco
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Dmitry Beloglazov

 -- Colin Watson <cjwatson@debian.org>  Sat, 29 Jan 2005 21:18:28 +0000

partconf (1.05) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team